Fix Halloween spacing

--- a/css/events.css
+++ b/css/events.css
@@ -1,4 +1,5 @@
 /* SUMMER GAMES 2016 */
+
 #SUMMER_GAMES_2016 #col1 {
   width: 50%;
 }
@@ -40,8 +41,6 @@
   padding: 0 10px;
 }
 
-
-
 #SUMMER_GAMES_2016 #voicelines {
   width: 36%;
 }
@@ -51,7 +50,7 @@
 }
 
 #SUMMER_GAMES_2016 #icons {
-      width: 63%;
+  width: 63%;
 }
 
 #SUMMER_GAMES_2016 #victoryposes {
@@ -82,7 +81,9 @@
   display: none;
 }
 
+
 /* HALLOWEEN 2016 */
+
 #HALLOWEEN_2016 .col {
   display: initial;
 }
@@ -115,13 +116,13 @@
   padding: 0 8px;
 }
 
-#HALLOWEEN_2016 #voicelines, #HALLOWEEN_2016 #victoryposes {
+#HALLOWEEN_2016 #voicelines {
   width: 49.5%;
   display: inline-block;
 }
 
 #HALLOWEEN_2016 #sprays {
-      width: 44%;
+  width: 36%;
 }
 
 #HALLOWEEN_2016 #icons {
@@ -150,15 +151,21 @@
 }
 
 #HALLOWEEN_2016 #row2 .left {
-  width: 13%;
+  width: 14%;
 }
 
 #HALLOWEEN_2016 #row2 .right {
-      width: 18%;
-    margin: 0 8px;
+  width: 18%;
+  margin: 0 8px;
 }
 
+#HALLOWEEN_2016 #victoryposes {
+  width: 31%;
+}
+
+
 /* WINTER WONDERLAND 2016 */
+
 #WINTER_WONDERLAND_2016 #row1 #col1 {
   width: 60%;
 }
@@ -216,7 +223,7 @@
 
 #WINTER_WONDERLAND_2016 #victoryposes {
   width: 17%;
-    margin: 0 8px;
+  margin: 0 8px;
 }
 
 #WINTER_WONDERLAND_2016 #victoryposes .items {
@@ -239,7 +246,9 @@
   height: 265px;
 }
 
+
 /* YEAR OF THE ROOSTER 2017 */
+
 #YEAR_OF_THE_ROOSTER_2017 #row1 #col1 {
   width: 61%;
 }
@@ -296,10 +305,12 @@
   padding: 4px 2px;
 }
 
+
 /* SMALL MODE CSS */
+
 @media screen and (max-width: 1570px) {
   /* HALLOWEEN */
-  #HALLOWEEN_2016  {
+  #HALLOWEEN_2016 {
     flex-direction: column;
     align-items: center;
     width: 1000px;
@@ -349,9 +360,8 @@
   #HALLOWEEN_2016 #sprays {
     width: 62%
   }
-
   /* WINTER */
-  #WINTER_WONDERLAND_2016  {
+  #WINTER_WONDERLAND_2016 {
     flex-direction: column;
     align-items: center;
     width: 1000px;
@@ -385,15 +395,12 @@
   #WINTER_WONDERLAND_2016 #row2 #sprays {
     width: 68%;
   }
-
   #WINTER_WONDERLAND_2016 #row2 #sprays .items {
     height: 365px;
   }
-
   #WINTER_WONDERLAND_2016 #row2 #sprays .item {
     width: 32.5%;
   }
-
   /* ROOSTER */
   #YEAR_OF_THE_ROOSTER_2017 {
     flex-direction: column;
@@ -438,7 +445,7 @@
 }
 
 @media screen and (max-width: 1655px) {
-  #SUMMER_GAMES_2016  {
+  #SUMMER_GAMES_2016 {
     flex-direction: column;
     align-items: center;
     width: 1000px;
